# secunda-test_task

./: .env  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: config.py  main.py
app/core/entities/enterprise/: enterprise.py
app/core/entities/estate/: estate.py
app/core/entities/operation/: operation.py
app/core/repositories/enterprise_repository/: enterptise_repository.py
app/core/repositories/enterprise_repository/dto/: add_enterprise_dto.py  enterprise_dto.py  update_enterprise_dto.py
app/core/repositories/estate_repository/: estate_repository.py
app/core/repositories/estate_repository/dto/: add_enterprise_dto.py  update_enterprise_dto.py
app/core/repositories/operation_repository/: operation_repository.py
app/core/repositories/operation_repository/dto/: add_operation_dto.py  update_enterprise_dto.py
app/core/services/enterprise_service/: enterprise_service.py
app/core/services/estate_service/: estate_servise.py
app/core/services/operation_service/: operation_servise.py
app/infrastructure/controllers/rest_api/: handlers_enterprise.py  handlers_estate.py  handlers_operations.py  routers_bind.py
app/infrastructure/controllers/rest_api/middleware/: mw_autorize.py
app/infrastructure/controllers/rest_api/settings_swagger/: autorize.py
app/infrastructure/db/: session.py
app/infrastructure/db/entaties/: base.py  enterprise.py  estate.py  operation.py
app/infrastructure/db/entities/: enterprise.py  estate.py  operation.py
app/infrastructure/db/mappers/: enterprise_mapper.py  estate_mapper.py  operaion_mapper.py
app/infrastructure/db/migrations/: env.py
app/infrastructure/db/migrations/versions/: 17f6b9cb88e2_0002.py  675f0c7be7b1_0001.py  d7a0bda00f21_0001.py  e385a0dc515f_0001.py  f5679bf6de25_0003.py
app/infrastructure/db/repository/: enterprise_repository.py  estate_repository.py  operation_repository.py
